Changed asset cache to have different traits for stateful and stateless loading
but also made it not actually contain the state 'cause that doesn't
jibe well with ggez's Context type.  So you have to know what you're
doing and it's a bit more fiddly but is actually type-safe...

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,6 @@ readme = "README.md"
 
 [dependencies]
 #ggez = { path = "/home/icefox/src/ggez" }
-ggez = { git = "https://github.com/ggez/ggez", branch = "master" }
+ggez = { git = "https://github.com/ggez/ggez", branch = "devel" }
 rand = "0.3"
 nalgebra = "0.10"
