--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ rust:
   - stable
   - beta
   - nightly
+matrix:
+  allow_failures:
+    - rust: nightly
 
 install:
   - wget http://libsdl.org/release/SDL2-2.0.5.tar.gz
@@ -13,7 +16,7 @@ install:
   - wget https://www.libsdl.org/projects/SDL_mixer/release/SDL2_mixer-2.0.1.tar.gz
   - tar -xzvf SDL2_mixer-2.0.1.tar.gz
   - pushd SDL2_mixer-2.0.1 && ./configure --prefix=/usr && make && sudo make install && popd
-  
+
   - wget https://www.libsdl.org/projects/SDL_image/release/SDL2_image-2.0.1.tar.gz
   - tar -xzvf SDL2_image-2.0.1.tar.gz
   - pushd SDL2_image-2.0.1 && ./configure --prefix=/usr && make && sudo make install && popd
