--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,6 @@ readme = "README.md"
 
 [dependencies]
 #ggez = { path = "/home/icefox/src/ggez" }
-ggez = { git = "https://github.com/ggez/ggez", branch = "devel" }
+ggez = { git = "https://github.com/ggez/ggez", branch = "master" }
 rand = "0.3"
 nalgebra = "0.10"
