Working on tiled loader.
Turns out serde_xml 0.9 does not work with serde 0.9.  WTF is wrong with people?

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,6 @@ rand = "0.3"
 nalgebra = "0.10"
 serde = "0.9"
 serde_derive = "0.9"
-serde_json = "0.9" 
-
+serde_json = "0.9"
+serde-xml-rs = "0.1"
 
