--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,8 @@ readme = "README.md"
 
 
 [dependencies]
-#ggez = { path = "/home/icefox/src/ggez" }
-ggez = { git = "https://github.com/ggez/ggez", branch = "master" }
+ggez = { path = "../ggez" }
+#ggez = { git = "https://github.com/ggez/ggez", branch = "master" }
 rand = "0.3"
 nalgebra = "0.12"
 serde = "1.0"
