--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,7 @@ readme = "README.md"
 
 
 [dependencies]
-#ggez = { path = "/home/icefox/src/ggez" }
-ggez = { git = "https://github.com/ggez/ggez", branch = "master" }
+ggez = "0.4.0-rc.1"
 rand = "0.3"
 serde = "1.0"
 serde_derive = "1.0"
