Basic input stuff works...
...though it does need updating with ggez's new keyboard/mouse
state API's.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,6 @@ readme = "README.md"
 
 
 [dependencies]
-ggez = "0.4"
+#ggez = "0.4"
+ggez = {git = "https://github.com/ggez/ggez.git", branch="devel"}
 rand = "0.4"
