Fix broken ggez link in Cargo.toml
We really need to make sure we divide this into
devel and release versions properly...

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,5 @@ readme = "README.md"
 
 
 [dependencies]
-#ggez = "0.4"
-ggez = {path = "/home/icefox/my.src/ggez/ggez", features=["bundled"]}
+ggez = "0.4"
 rand = "0.4"
