Updated ggez usage to reflect v0.5.0-rc.0

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,17 @@
 [package]
 name = "ggez-goodies"
 description = "Various small useful add-ons for the ggez game framework"
-version = "0.1.0"
+version = "0.5.0-rc.0"
 repository = "https://github.com/ggez/ggez-goodies"
 documentation = "https://docs.rs/ggez-goodies"
 authors = ["Simon Heath <icefoxen@gmail.com>"]
+edition = "2018"
 license = "MIT"
 readme = "README.md"
 
 
 [dependencies]
-ggez = "0.4"
+ggez = { git = "https://github.com/ggez/ggez" }
 rand = "0.4"
 
 [dev-dependencies]
