--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,14 @@ edition = "2018"
 license = "MIT"
 readme = "README.md"
 
+[profile.dev]
+opt-level = 1
 
 [dependencies]
 ggez = "0.5.0-rc.1"
 nalgebra-glm = "0.4.0"
 rand = "0.6"
+tiled = "0.8"
 
 [dev-dependencies]
 ezing = "0.2"
