--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ opt-level = 1
 
 [dependencies]
 ggez = "0.5.0-rc.1"
+# ggez = {path = "/home/icefox/my.src/ggez/ggez"}
 nalgebra-glm = "0.4.0"
 tiled = "0.8"
 euclid = {version = "0.19", features = ["mint"]}
