--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ readme = "README.md"
 opt-level = 1
 
 [dependencies]
-ggez = {path = "../ggez"}
+ggez = {git = "https://github.com/ggez/ggez", branch = "devel"}
 nalgebra-glm = "0.4.0"
 tiled = "0.8"
 euclid = {version = "0.19", features = ["mint"]}
